CheckoutService migration
