# src/app/api/models/payment-param.ts
@@ -1,6 +1,5 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface PaymentParam {
-  orderId?: number;
-  type?: string;
+  type?: 'check' | 'deposit';
 }
