# src/app/api/services.ts
@@ -1,5 +1,4 @@
 export { AccountService } from './services/account.service';
 export { AuthenticationService } from './services/authentication.service';
 export { CatalogService } from './services/catalog.service';
-export { CheckoutService } from './services/checkout.service';
 export { CommonService } from './services/common.service';
